@@ -1,0 +1,1 @@
+insert overwrite into table1 select l_orderkey, l_partkey, l_quantity from default.lineitem;
